NetConf2023/page_pool: Fix missing export
Signed-off-by: Jesper Dangaard Brouer <hawk@kernel.org>

--- a/conference/NetConf2023/page_pool_discussion.org
+++ b/conference/NetConf2023/page_pool_discussion.org
@@ -141,7 +141,7 @@ Jakub's design does fit into Page Pool
 
 Jesper thinks: Should be new *devmem* /memory allocator type/
 
-* Slide: Open discussion
+* Slide: Open discussion                                             :export:
 
 Open Discussion
 
