NetConf2023/softirq: Brainstorm
Signed-off-by: Jesper Dangaard Brouer <hawk@kernel.org>

--- a/conference/NetConf2023/softirq_revert_discussion.org
+++ b/conference/NetConf2023/softirq_revert_discussion.org
@@ -18,6 +18,30 @@ This presentation will be given at [[http://vger.kernel.org/netconf2023.html][Ne
 
 * Brainstorm
 
+Eric Dumazet's 2016 change to softirq
+ - Reverted by Paolo
+
+Patch solved UDP overload case
+ - that resulted in falling-of-edge when UDP-app and RX-NAPI share CPU
+
+Over the years there have been several cases
+ - that indicate this approach have caused issues
+ - it is likely right choice to revert
+
+The question is how to address UDP overload case in a new way
+ - The solution could be to ask user to use other APIs
+   - Tried multi UDP message recv (=recvmmsg=) but does NOT work
+   - Tried UDP GRO but didn't manage to configure it correctly
+   - io_uring could be an option (no time to test)
+
+Show data on UDP overload case
+ - Explain: Kernel is now again open to this DoS overload case
+
+Hopefully get production data from Yan/Cloudflare
+
+Perhaps: Slide explaining the problem of
+ - RX-NAPI enqueuing 64-packets, each timeUDP-app dequeue 1-packet
+
 
 * Emacs tricks                                                     :noexport:
 
